--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	  <li class="nav-item nav-itemglob">
 	    <img src="https://zupimages.net/up/20/29/knfi.png" width="150" height="150">
 	  </li>
-	  <li class="nav-item nav-itemglob"><h1><a href="#"><b>Ω</b>MÉGOUV</a></h1></li>
+	  <li class="nav-item nav-itemglob"><h1><a href="https://johnrice0174.github.io/omega.gouv.fr/"><b>Ω</b>MÉGOUV</a></h1></li>
 	  <li class="nav-item nav-itemglob dropdown">
 	    <a class="nav-link nav-linkglob dropdown-toggle dropd-glob" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Toute La Législation</a>
 	    <div class="dropdown-menu">
@@ -77,11 +77,15 @@
 		.nav-itemglob {
 			margin-right: 5%;
 		}	
-		.nav-itemglob > h1 {
+		.nav-itemglob > h1 > a {
 			font-family: 'Candal', sans-serif;
 			color: white;
 			margin-top: 20%;
 		}
+		.nav-itemglob > h1 > a:hover {
+			color: gold;
+			text-decoration: none;
+		}	
 		.navt {
 			margin-top: 43%;
 			font-size: 1.2em;
