--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			background-color: grey;
 		}
 		/*------ HEADER NAV GLOB-------*/
-		@import url('https://fonts.googleapis.com/css2?family=Candal&display=swap');
+		@import url('https://fonts.googleapis.com/css2?family=Frijole&display=swap');
 		.navglob {
 			background-color: purple;
 		}
@@ -78,7 +78,7 @@
 			margin-right: 5%;
 		}	
 		.nav-itemglob > h1 {
-			font-family: 'Candal', sans-serif;
+			font-family: 'Frijole', cursive;
 			color: white;
 			margin-top: 20%;
 		}
